# hfsplus

./: .cvsignore  AUTHORS  COPYING  ChangeLog  INSTALL  NEWS  README  VERSION  configure.in  index.html
debian/: changelog  clean  control  copyright  hfsplus.manpages  hfsplus.sgml  hpcd.sgml  hpcopy.sgml  hpfsck.sgml  hpls.sgml  hpmkdir.sgml  hpmount.sgml  hppwd.sgml  hprm.sgml  hpumount.sgml  libhfsp-dev.install  libhfsp0.docs  libhfsp0.install  libhfsp0.symbols  rules  watch
debian/patches/: 120137_ftbfs_hppa_gcc3.0.dpatch  147838_sigbus_sparc.dpatch  231270_hpmount_destroys_hfs_volume_headers.dpatch  277810_ftbfs_include_gcc3.4.dpatch  286366_ftbfs_amd64_gcc4.0.dpatch  300289_ftbfs_ppc64_gcc4.0.dpatch  334016_broken_bswab_inc_macros.dpatch  396180_remove_unused_header.dpatch  548257_use_printf_macros.patch  957336_ftbfs-gcc10.patch  99_types.dpatch  dont_overwrite_cflags.patch  remove_duplicate_function_definitions.patch  series
doc/: bugs.html  faq.html  hfsp.html  libhfsp.html
doc/man/: hfsp.man  hfsp.sgml  hfsp.txt
libhfsp/: .cvsignore
libhfsp/src/: .cvsignore  FastUnicodeCompare.c  apple.h  blockiter.c  blockiter.h  btree.c  btree.h  btreecheck.c  debug.txt  fscheck.c  fscheck.h  hfs.h  hfsp.h  hfstime.c  hfstime.h  libhfsp.c  libhfsp.h  os.c  os.h  partitions.c  partitions.h  record.c  (+5 more)
mail/: Apple.txt  FlarKernel.txt  Re1.0.0.txt  ReAcces.txt  Re_AW2_More_progress_on_HFS.txt  Re_BugReport_HFS_implementation_in_OS_9.txt  Re_hfs_support_for_blocksize  bnode.diff  btree.diff  buildrpm.txt  catalog.diff  dave.html  dir.diff  file.diff  flar.txt  flar2.txt  flar3.txt  gewrgiou@imbc.gr  hfsplus.html  kaempf.txt  main.c  phandle  reflar.txt  reflar2.txt  reflar3.txt  super.diff  unicode.diff
rpm/: hfsplus.spec
src/: binhex.c  binhex.h  charset.c  charset.h  check1  copyout.c  copyout.h  crc.c  crc.h  darray.c  darray.h  dlist.c  dlist.h  dstring.c  dstring.h  glob.c  glob.h  hfsputil.c  hfsputil.h  hp.txt  hpcache.c  hpcache.h  hpcd.c  hpcopy.c  hpfsck.c  hpls.c  hpmkdir.c  hpmount.c  hppwd.c  hprm.c  hpumount.c
(+6 files in other folders)
